fix: reduce layout shift

--- a/assets/css/_core/_layout.scss
+++ b/assets/css/_core/_layout.scss
@@ -7,6 +7,7 @@
 
   main {
     flex: 1 0 auto;
+    overflow-x: hidden;
 
     .container {
       padding: 0 1rem;
